--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body ng-controller="StoreController as store">
     <!--  Store Header  -->
     <header>
-      <h1 class="text-center">Angular JS Trial - Flatlander Crafted Gems</h1>
+      <h1 class="text-center">Angular JS Trial </h1>
       <h2 class="text-center">– an Angular store –</h2>
     </header>
 
